<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_meterdetails" />
        <item
            android:id="@+id/meterv"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_meterview" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_feederdetails" />
        <item
            android:id="@+id/feederv"
            android:icon="@drawable/ic_menu_gallery"
            android:title="Feeder View" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_monthlyaccounting" />
        <item
            android:id="@+id/nav_tools"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/menu_report" />
    </group>



</menu>
