<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        style="@style/scrollbar_shape_style"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="2dp"
        android:background="@color/colorPrimary">



    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
         android:background="@color/white"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp">


         <com.google.android.material.textfield.TextInputLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             >
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="@string/feeder_title"
                 android:textColor="@color/black"
                 android:layout_marginTop="10dp"
                 android:gravity="center"
                 android:textSize="20dp">

             </TextView>
         </com.google.android.material.textfield.TextInputLayout>

         <com.google.android.material.textfield.TextInputLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginLeft="8dp"
             android:layout_marginRight="8dp">
             <EditText
                 android:id="@+id/userid"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:inputType="number"
                 android:hint="@string/menu_circleid"/>
         </com.google.android.material.textfield.TextInputLayout>

         <com.google.android.material.textfield.TextInputLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginLeft="8dp"
             android:layout_marginRight="8dp">
             <EditText
                 android:id="@+id/feederno"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:inputType="number"
                 android:hint="@string/menu_feedernumber">
             </EditText>
         </com.google.android.material.textfield.TextInputLayout>

         <com.google.android.material.textfield.TextInputLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginLeft="8dp"
             android:layout_marginRight="8dp">
             <EditText
                 android:id="@+id/feedername"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:inputType="text"
                 android:hint="@string/menu_feedername" />
         </com.google.android.material.textfield.TextInputLayout>


         <com.google.android.material.textfield.TextInputLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginLeft="8dp"
             android:layout_marginRight="8dp">
             <EditText
                 android:id="@+id/typeconductor"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:inputType="text"
                 android:hint="@string/menu_typeconductor"/>
         </com.google.android.material.textfield.TextInputLayout>

         <com.google.android.material.textfield.TextInputLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginLeft="8dp"
             android:layout_marginRight="8dp">
             <EditText
                 android:id="@+id/totallength"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:inputType="number"
                 android:hint="@string/menu_totallength">
             </EditText>
         </com.google.android.material.textfield.TextInputLayout>

         <com.google.android.material.textfield.TextInputLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginLeft="8dp"
             android:layout_marginRight="8dp">
             <EditText
                 android:id="@+id/nodtrs"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:inputType="number"
                 android:hint="@string/menu_noofdtrs">
             </EditText>
         </com.google.android.material.textfield.TextInputLayout>

         <com.google.android.material.textfield.TextInputLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginLeft="8dp"
             android:layout_marginRight="8dp"
             >
             <EditText
                 android:id="@+id/totalconsumers"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:inputType="number"
                 android:layout_marginBottom="30dp"
                 android:hint="@string/menu_totalconsumers">
             </EditText>
         </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             >
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="@string/menu_connectivity"
                 android:textColor="@color/black"
                 android:layout_marginTop="15dp"
                 android:gravity="center"
                 android:layout_marginBottom="10dp"
                 android:textSize="18dp">

             </TextView>
         </com.google.android.material.textfield.TextInputLayout>

         <com.google.android.material.textfield.TextInputLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginLeft="8dp"
             android:layout_marginRight="8dp">
             <EditText
                 android:id="@+id/conn_no"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:inputType="number"
                 android:hint="@string/conn_no">

             </EditText>
         </com.google.android.material.textfield.TextInputLayout>

         <com.google.android.material.textfield.TextInputLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginLeft="8dp"
             android:layout_marginRight="8dp">
             <EditText
                 android:id="@+id/meter_no"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:inputType="number"
                 android:hint="@string/menu_meterfrag">

             </EditText>
         </com.google.android.material.textfield.TextInputLayout>

         <Spinner
             android:id="@+id/meter_feature"
             android:layout_width="match_parent"
             android:layout_height="50dp"
             android:layout_marginLeft="8dp"
             android:layout_marginRight="8dp"
             style="@style/Widget.AppCompat.Spinner.Underlined"
             android:entries="@array/meterfeature_array">

         </Spinner>

         <Spinner
             android:id="@+id/conn_type"
             android:layout_width="match_parent"
             android:layout_height="50dp"
             android:layout_marginLeft="8dp"
             android:layout_marginRight="8dp"
             style="@style/Widget.AppCompat.Spinner.Underlined"
             android:entries="@array/conn_array">

         </Spinner>

         <com.google.android.material.textfield.TextInputLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginLeft="8dp"
             android:layout_marginRight="8dp">
             <EditText
                 android:id="@+id/conn_name"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:inputType="text"
                 android:hint="@string/conn_name">

             </EditText>
         </com.google.android.material.textfield.TextInputLayout>

         <Button
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:id="@+id/submit"
             android:text="SUBMIT"
             android:layout_gravity="center"
             android:layout_marginLeft="14dp"
             android:layout_marginTop="30dp"
             android:layout_marginRight="14dp"
             android:layout_marginBottom="20dp"
             android:background="@color/colorPrimary">

         </Button>

     </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>